# HybridLink-Edge-Gateway-Project

./: .gitignore  CMakeLists.txt  Target.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old
components/Core/: CMakeLists.txt
components/Core/include/: Thread.hpp
components/OTAServer/: CMakeLists.txt  OTAServer.cpp  UartOTAReceiver.cpp
components/OTAServer/include/: OTAProtocol.hpp  OTAServer.hpp  UartOTAReceiver.hpp
components/bno055/: CMakeLists.txt  bno055.c  bno055.cpp
components/bno055/include/: bno055.h  bno055driver.hpp  bno055task.hpp
components/calculate/: CMakeLists.txt  DSPEngine.cpp
components/calculate/include/: DSPEngine.hpp  DSPTask.hpp  model.h  model.hpp
components/led/: CMakeLists.txt  led.c  led.cpp
components/led/include/: led.h  led.hpp  ledTask.hpp
components/network/: CMakeLists.txt  MQTTClient.cpp  WIFI.c  WifiStation.cpp  my_mqtt_client.c
components/network/include/: MQTTClient.hpp  MQTTTask.hpp  WIFI.h  WifiStation.hpp  WifiTask.hpp  my_mqtt_client.h
docs/: HTTP_OTA_Guide.md  UART_OTA_Guide.md
main/: APPConfig.h  CMakeLists.txt  Thread.hpp  idf_component.yml  main.cpp
orangepi_gateway/: ec20_dial.sh  install.sh  mqtt_ota_client.py  ota_http_server.py  ota_protocol.py  requirements.txt  uart_ota_sender.py
tools/: firmware_uploader.py
